Fix select component to overlap other elements

--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -1,50 +1,54 @@
 .container {
-  border: 2px solid var(--gray-1);
-  border-radius: 7px;
-  background-color: var(--white);
   flex-direction: column;
-  padding: 0 0.8rem;
+  position: relative;
 }
-.container--dark {
-  border-color: var(--dark);
-}
-
-.options {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-}
-.current {
+.select {
   display: inline-block;
   width: 100%;
+  border-radius: 7px;
   font-size: 1.7rem;
-  padding: 1.8rem 1rem 1.6rem;
   letter-spacing: -0.4px;
-  color: var(--gray-1);
 }
-.current::first-letter {
+.select::first-letter {
   text-transform: capitalize;
 }
-.container--dark > .current {
-  color: var(--dark);
+
+.closed {
+  color: var(--gray-1);
+  border: 2px solid var(--gray-1);
+  padding: 1.8rem 1.8rem 1.6rem;
+}
+.open {
+  display: inline-block;
+  width: 100%;
+  position: absolute;
+  border-radius: 7px;
+  padding: 0rem 1rem 1rem;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  background-color: var(--white);
+  border: 2px solid var(--gray-1);
+}
+.cancelButton {
+  padding: 1.8rem 0 1.6rem 0.8rem;
+  color: var(--gray-1);
 }
 .radio {
   display: none;
 }
 .option {
-  display: inline-block;
-  font-size: 1.7rem;
-  padding: 1.8rem 1rem 1.6rem;
-  letter-spacing: -0.4px;
-  border-radius: 7px;
   color: var(--dark);
-  width: 100%;
-}
-.option::first-letter {
-  text-transform: capitalize;
+  padding: 1.8rem 0.8rem 1.6rem;
 }
 
 .option:hover {
   background-color: var(--gray-1);
+  font-weight: 500;
+}
+
+.dark {
+  color: var(--dark);
+  border-color: var(--dark);
   font-weight: 500;
 }
